--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
-}
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+* {
   background-color: #282c34;
-  min-height: 100vh;
+  color: #61dafb;
+  /* font-family: 'Poppins', sans-serif; */
+  /* min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: white; */
 }
 
-.App-link {
-  color: #61dafb;
+.Header
+{
+  text-align: center;
+  font-size:x-large;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.View
+{
+  display: flex;
+}
+
+.Lists
+{
+  /* width: 100%; */
+  text-align: center;
+  font-family: 'East Sea Dokdo', cursive;
+  font-size: larger;
+}
+
+.part2
+{
+  width: 50%;
+  text-align: center;
+  font-family: 'East Sea Dokdo', cursive;
+  font-size: larger;
+}
+
+.q
+{
+  display: flex;
+  text-align: center;
+}
+
+.Whole
+{
+  display: flex;
+  flex-direction: row;
 }
