--- a/src/ALLCSS.css
+++ b/src/ALLCSS.css
@@ -44,7 +44,7 @@ body
 .footer
 {
     text-align: center;
-    position: absolute;
+    position: relative;
     width: 100%;
     bottom: 0;
     height: 2.5rem;
@@ -89,13 +89,27 @@ body
     font-size: larger;
 }
 
-/* .View
-{
-    border-radius: 25px;
-} */
-
-.q
+.InsideTasks
 {
     display: flex;
-    text-align: center;
+    color: #9DAAF2;
+}
+
+/* .InsideTasks button
+{
+    margin-left: 10%;
+    margin-right: 20%;
+    width: 2em;
+    height: 2em;
+    background-color: #1A2238;
+} */
+
+.InsideTasks img
+{
+    margin-left: 10%;
+    margin-right: 20%;
+    margin-bottom: 1em;
+    width:2em;
+    height:2em;
+    color: white;
 }
