--- a/src/ALLCSS.css
+++ b/src/ALLCSS.css
@@ -24,14 +24,14 @@ body
     text-align: left;
     padding-left: 10px;
     width: 50%;
-    font-size: larger;
+    font-size: xx-large;
 }
 
 .Header p
 {
     text-align: right;
     width: 50%;
-    font-size: medium;
+    font-size: large;
     padding-right: 30px;
     padding-top: 20px;  
 }
@@ -69,7 +69,7 @@ body
 .Lists h1
 {
     color: #9DAAF2;
-    font-size: larger;
+    font-size:larger;
 }
 .Tasks
 {
@@ -93,24 +93,119 @@ body
 {
     display: flex;
     color: #9DAAF2;
+    margin-left: 10%;
+    margin-top: 0%;
 }
 
-/* .InsideTasks button
+.InsideTasks p
 {
+    /* text-align: right; */
     margin-left: 10%;
-    margin-right: 20%;
-    width: 2em;
-    height: 2em;
-    background-color: #1A2238;
-} */
+    font-size:large;
+}
 
-.InsideTasks img
+.new {
+    background: transparent;
+    border: 0;
+    color: #9DAAF2;
+    border-bottom: 2px solid  #9DAAF2;
+    font-size: inherit;
+    outline: none;
+    padding: 0;
+    transition: border-bottom 150ms ease-in;
+    order: 2;
+    text-align: center;
+}
+.btn {
+    cursor: pointer;
+    background: 0;
+    border: 0;
+    padding: 0;
+    color: #9DAAF2;
+  }
+  
+.btn.create {
+    font-size: 1.5rem;
+    font-weight: 900;
+    margin-right: 0.25em;
+    transition: opacity 250ms ease-in;
+}
+  
+  .btn.create:hover {
+    opacity: 0.7;
+  }  
+
+  .newi {
+    background: transparent;
+    border: 0;
+    color:#F4DB78;
+    border-bottom: 2px solid  #F4DB78;
+    font-size: inherit;
+    outline: none;
+    padding: 0;
+    transition: border-bottom 150ms ease-in;
+    order: 2;
+    text-align: center;
+}
+.btni {
+    cursor: pointer;
+    background: 0;
+    border: 0;
+    padding: 0;
+    color:#F4DB78;
+  }
+  
+.btni.createi {
+    font-size: 1.5rem;
+    font-weight: 900;
+    margin-right: 0.25em;
+    transition: opacity 250ms ease-in;
+}
+  
+  .btni.createi:hover {
+    opacity: 0.7;
+  }  
+
+.btn2 
 {
-    margin-left: 10%;
+    cursor: pointer;
+    background: 0;
+    border: 0;
+    padding: 0;
+    color:#dce1ef;
+}  
+.btn2.create2 
+{
+    font-size: medium;
+    font-weight: 900;
     margin-right: 20%;
-    /* margin-bottom: 1em; */
-    margin-top: 1%;
-    /* width:41.64mm; */
-    /* height:23.33mm; */
-    color: white;
+    transition: opacity 250ms ease-in;
+    height: 3.5rem;
+}  
+.btn2.create2:hover 
+{
+    opacity: 0.7;
+}  
+
+.Intro
+{
+    display: flex;
+    text-align: center;
+    align-content: center;
+}
+.Intro p
+{
+    color: #F4DB78; 
+    margin-left: 20%;  
+    margin-top: 2%;
+    margin-bottom: 2%;
+}
+
+.Intro h5
+{
+    margin-left: 2%;
+    color:#FF6A3D;
+    font-size: large;
+    margin-top: 2%;
+    margin-bottom: 2%;
 }
